# theyrefor

./: .gitignore  Cargo.toml  README.md  index.html  index.scss  rustfmt.toml
.github/workflows/: deploy.yml  verify.yml
models/: Cargo.toml
models/src/: lib.rs  user.rs
server/: Cargo.toml
server/src/: auth.rs  catcher.rs  clips.rs  data.rs  fairing.rs  guilds.rs  main.rs  middleware.rs  spa_server.rs  user.rs  util.rs
server/src/api/: audio.rs  auth.rs  clips.rs  guilds.rs  mod.rs  user.rs
server/src/discord_client/: http_util.rs  mod.rs  models.rs  twilight_util.rs  util.rs
src/: app_route.rs  main.rs
src/pages/: home.rs  mod.rs  page_not_found.rs  soundboard.rs
src/pages/guilds/: guilds_component.rs  guilds_view.rs
src/pages/soundboard/: soundboard_component.rs  soundboard_view.rs
ui/: Cargo.toml  index.html  index.scss
ui/src/: app_route.rs  http_client.rs  main.rs  route.rs
ui/src/pages/: home.rs  mod.rs  not_found.rs
ui/src/pages/admin/: admin_component.rs  admin_view.rs
ui/src/pages/clips/: mod.rs
ui/src/pages/clips/admin/: admin_component.rs  admin_view.rs  mod.rs
ui/src/pages/clips/soundboard/: mod.rs  soundboard_component.rs  soundboard_view.rs
ui/src/pages/guilds/: guilds_component.rs  guilds_view.rs  mod.rs
ui/src/pages/soundboard/: mod.rs  soundboard_component.rs  soundboard_view.rs
