[package]
name = "theyrefor-server"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bincode = "1.3"
futures = "0.3"
log = "*"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets" ] }
serde = { version = "1", features = ["derive" ] }
serde_millis = "0.1"
serde_json = "1.0"
serde_urlencoded = "0.7"
theyrefor-models = { path = "../models" }
urlencoding = "2.1"