[package]
name = "theyrefor-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
bincode = "1.3"
futures = "0.3"
http = "0.2"
log = "*"
moka = { version = "0.9", features = ["future"] }
mime = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets" ] }
serde = { version = "1", features = ["derive" ] }
serde_millis = "0.1"
serde_json = "1.0"
serde_urlencoded = "0.7"
theyrefor-models = { path = "../models", features = ["twilight-model"] }
twilight-http = "0.15"
twilight-model = "0.15"
urlencoding = "2.1"