[package]
name = "theyrefor-ui"
version = "0.1.0"
edition = "2021"
authors = ["Isaac M. Good <imgood@imgoodproductions.org>"]

[dependencies]
base64 = "0.13"
bincode = "1.3"
http = "0.2"
log = "*"
reqwasm = "0.4"
serde = "1.0"
theyrefor-models = { path = "../models" }
url = "2.2"
urlencoding = "2.1"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { features = ["Location", "Window"], version = "0.3" }
yew = "0.19"
yew-router = "0.16"
yewtil = "0.4"
