[package]
name = "theyrefor-ui"
version = "0.1.0"
edition = "2021"
authors = ["Isaac M. Good <imgood@imgoodproductions.org>"]

[dependencies]
base64 = "0.21"
bincode = "1.3"
http = "0.2"
log = "*"
reqwasm = "0.5"
serde = "1.0"
theyrefor-models = { path = "../models" }
url = "2.2"
urlencoding = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"

[dependencies.web-sys]
features = [
   "Document",
   "Element",
   "Event",
   "EventTarget",
   "HtmlCollection",
   "HtmlInputElement",
   "HtmlMediaElement",
   "Location",
   "MouseEvent",
   "Node",
   "NodeList",
   "Window"
]
version = "0.3"